clamav/templates/allow-openshift-ingress-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: clamav-allow-visitz-traffic
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: clamav
  ingress:
  - from:
    - namespaceSelector: {}
    podSelector:
      matchLabels:
        app.kubernetes.io/name: vpi-app
  - from:
    - namespaceSelector: {}
    podSelector:
      matchLabels:
        app.kubernetes.io/name: wm-passthru-app
